# NS_Zip-Accrual-Demo

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: close_calendar.yaml  gl_mappings.yaml  vendor_contacts.yaml
config/seatgeek/: gl_mappings.yaml  vendor_contacts.yaml
config/templates/: checkpoint_report.j2  escalation.j2  initial_request.j2  internal_request.j2  reminder_day10.j2  reminder_day3.j2  reminder_day7.j2
datasets/seatgeek/: README.md  ad_spend.csv  chart_of_accounts.csv  classes.csv  departments.csv  exchange_rates.csv  goods_receipts.csv  journal_entries.csv  journal_entry_lines.csv  locations.csv  purchase_order_lines.csv  purchase_orders.csv  seatgeek_dataset.json  subsidiaries.csv  vendor_bills.csv  vendors.csv  zip_requisitions.csv
scripts/: generate_seatgeek_dataset.py  validate_seatgeek_dataset.py
src/accrual_agent/: __init__.py  cli.py  config.py  demo_runner.py  fiscal.py  locking.py  logging_setup.py  models.py  runtime.py
src/accrual_agent/comms/: cadence.py  inbound.py  llm_extractor.py  mailer.py  outbound.py  templates.py
src/accrual_agent/engine/: api_accruals.py  close_cycle.py  confirmation.py  escalation.py  identification.py  trust.py  writeback.py
tests/: conftest.py  test_confirmation_and_cadence.py  test_e2e_close_cycle.py  test_fiscal.py  test_http_clients.py  test_inbound_parsing.py  test_mvp_profile.py  test_outbound_gate.py  test_register.py  test_v2_features.py  test_writeback.py
web/: README.md  package-lock.json  package.json
web/src/app/: layout.tsx  (+2 more)
(+49 files in other folders)
